--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,27 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+  
+      <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.8/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+          apiKey: "AIzaSyD9iI40s8kvtlBZ3-o5brCYjXq_Me8kMT4",
+          authDomain: "ecommerce-demo-app-d8b61.firebaseapp.com",
+          projectId: "ecommerce-demo-app-d8b61",
+          storageBucket: "ecommerce-demo-app-d8b61.appspot.com",
+          messagingSenderId: "175192772332",
+          appId: "1:175192772332:web:cb13879f15b8c6b5dd5fc9"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+      </script>
+  
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
